analysis/spring-framework/step_1/logs/8988-16410ca.log
:buildSrc:compileJava UP-TO-DATE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava UP-TO-DATE
:buildSrc:compileTestGroovy UP-TO-DATE
:buildSrc:processTestResources UP-TO-DATE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test UP-TO-DATE
:buildSrc:check UP-TO-DATE
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:compileJava/home/ubuntu/bugs/spring-framework/spring-core/src/main/java/org/springframework/asm/ClassWriter.java:759: error: unmappable character for encoding ASCII
        // ??4.7.6 of the JVMS states "Every CONSTANT_Class_info entry in the
           ^
/home/ubuntu/bugs/spring-framework/spring-core/src/main/java/org/springframework/asm/ClassWriter.java:759: error: unmappable character for encoding ASCII
        // ??4.7.6 of the JVMS states "Every CONSTANT_Class_info entry in the
            ^

:spring-core:processResources UP-TO-DATE
:spring-core:classes
:spring-core:objenesisRepackJar
:spring-core:jar
:spring-beans:compileJava
:spring-beans:processResources
:spring-beans:classes
:spring-beans-groovy:compileJava SKIPPED
:spring-beans-groovy:compileGroovywarning: [options] bootstrap class path not set in conjunction with -source 1.6
1 warning

:spring-beans-groovy:processResources UP-TO-DATE
:spring-beans-groovy:classes
:spring-beans:jar
:spring-aop:compileJava
:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileJava
:spring-expression:processResources UP-TO-DATE
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileJava
:spring-instrument:processResources UP-TO-DATE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileJava
:spring-context:compileGroovy UP-TO-DATE
:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileJava
:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileJava
:spring-jdbc:processResources
:spring-jdbc:classes
:spring-jdbc:jar
:spring-context-support:compileJava
:spring-context-support:processResources
:spring-context-support:classes
:spring-context-support:jar
:spring-oxm:compileJava
:spring-oxm:processResources
:spring-oxm:classes
:spring-oxm:jar
:spring-web:compileJava
:spring-web:processResources
:spring-web:classes
:spring-web:jar
:spring-orm:compileJava
:spring-orm:processResources UP-TO-DATE
:spring-orm:classes
:spring-orm-hibernate4:compileJava
:spring-orm-hibernate4:processResources UP-TO-DATE
:spring-orm-hibernate4:classes
:spring-orm:jar
:spring-aspects:compileJava
:spring-aspects:processResources
:spring-aspects:classes
:spring-aspects:jar
:spring-aspects:sourcesJar
:spring-aspects:assemble
:spring-aspects:build
:spring-beans:sourcesJar
:spring-beans:assemble
:spring-beans:build
:spring-beans-groovy:jar SKIPPED
:spring-beans-groovy:sourcesJar SKIPPED
:spring-beans-groovy:assemble
:spring-beans-groovy:build
:spring-build-src:assemble UP-TO-DATE
:spring-build-src:build
:spring-context:sourcesJar
:spring-context:assemble
:spring-context:build
:spring-context-support:sourcesJar
:spring-context-support:assemble
:spring-context-support:build
:spring-core:sourcesJar
:spring-core:assemble
:spring-core:build
:spring-expression:sourcesJar
:spring-expression:assemble
:spring-expression:build
:spring-framework-bom:assemble UP-TO-DATE
:spring-framework-bom:build
:spring-instrument:sourcesJar
:spring-instrument:assemble
:spring-instrument:build
:spring-instrument-tomcat:compileJava
:spring-instrument-tomcat:processResources UP-TO-DATE
:spring-instrument-tomcat:classes
:spring-instrument-tomcat:jar
:spring-instrument-tomcat:sourcesJar
:spring-instrument-tomcat:assemble
:spring-instrument-tomcat:build
:spring-jdbc:sourcesJar
:spring-jdbc:assemble
:spring-jdbc:build
:spring-messaging:compileJava

FAILURE: Build failed with an exception.

* What went wrong:
Could not resolve all dependencies for configuration ':spring-messaging:optional'.
> Could not find org.projectreactor:reactor-net:1.1.0.BUILD-SNAPSHOT.
  Required by:
      org.springframework:spring-messaging:4.1.0.BUILD-SNAPSHOT

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 47.55 secs
